--- a/client/style.css
+++ b/client/style.css
@@ -8,9 +8,19 @@ html, body {
 }
 #roomName input{
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 40%;
+    top: 20%;
+    width: 20%;
     font-family: 'VT323', monospace;
+    font-size: 32px;
+    color: #88AAFF;
+    border-color: #88AAFF;
+    padding: 10px;
+
+    text-shadow: 0 0 0.5em #88AAFF;
+    box-shadow: 0 0 0.5em #88AAFF;
+
+    background-color: rgba(0,0,0,0);
 }
 .container {
   border: solid 1px black;
