--- a/client/style.css
+++ b/client/style.css
@@ -132,14 +132,15 @@ button:hover {
   margin: 0px;
 }
 .crtEffect {
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   pointer-events: none;
   top: 0;
   left: 0;
   opacity: 0.5;
   background-image: url("CTRLines.png");
+  background-size: 200em;
 }
 .inputLabel {
   display: inline;
